--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "prettier": "^2.4.1",
     "prettier-plugin-import-sort": "^0.0.7",
     "typescript": "^4.4.3",
-    "metro-react-native-babel-preset": "^0.64.0"
+    "metro-react-native-babel-preset": "^0.64.0",
+    "mockdate": "^3.0.5"
   },
   "peerDependencies": {
     "react": ">=17.0.2",
