--- a/package.json
+++ b/package.json
@@ -28,21 +28,22 @@
   "devDependencies": {
     "@babel/core": "^7.15.8",
     "@types/jest": "^27.0.1",
-    "eslint-config-backpacker-react-ts": "^0.1.0",
+    "eslint-config-backpacker-react-ts": "^0.3.0",
+    "eslint-plugin-import": "^2.25.4",
     "husky": "^7.0.2",
     "import-sort-style-module": "^6.0.0",
     "jest": "^27.1.1",
     "lint-staged": "^11.1.2",
+    "metro-react-native-babel-preset": "^0.64.0",
+    "mockdate": "^3.0.5",
     "prettier": "^2.4.1",
     "prettier-plugin-import-sort": "^0.0.7",
-    "typescript": "^4.4.3",
-    "metro-react-native-babel-preset": "^0.64.0",
-    "mockdate": "^3.0.5"
+    "typescript": "^4.4.3"
   },
   "peerDependencies": {
+    "@react-native-async-storage/async-storage": ">=1.15.9",
     "react": ">=17.0.2",
-    "react-native": ">=0.66.1",
-    "@react-native-async-storage/async-storage": ">=1.15.9"
+    "react-native": ">=0.66.1"
   },
   "importSort": {
     ".js, .jsx, .ts, .tsx": {
